<resources>
    <string name="app_name">AAC</string>
    <!-- 二维码扫描 begin-->
    <string name="title_activity_main2">AAC</string>

    <string name="simple_complex_switch">简/繁</string>
    <string name="please_input_waybill_no">请输入运单编号</string>

    <!-- Strings related to login -->
    <string name="reward">收货</string>
    <string name="shipping">出货</string>
    <string name="arrival_station">抵达站所</string>
    <string name="transfer">国内转运</string>
    <string name="delivery">派送</string>
    <string name="logout">登出</string>
    <string name="inquiry">查询</string>
    <string name="no_inquiry_history">无查件历史信息、点击搜索框快捷查件</string>
    <string name="inquiry_history">查询历史</string>

    <string name="domestic_transfer">国内转运</string>
    <string name="select_guonei_kuaidi">选择国内快递</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="please_input_name_or_phoneNo">请输入姓名/手机号码</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="shippment_inquiry">货件查询</string>
    <string name="site_inquiry">站点查询</string>
    <string name="service_introduction">服务介绍</string>
    <string name="precaution">注意事项</string>
    <string name="important_matters">重要事项</string>
    <string name="feed_back">意见反馈</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="name">姓名</string>
    <string name="phone_no">邮箱</string>
    <string name="please_input_phone_no">请输入邮箱地址</string>
    <string name="feed_back_content">反馈内容</string>
    <string name="please_input_feed_back_content">请输入反馈内容</string>
    <string name="submit">提交</string>
    <string name="search_result">搜索结果</string>
    <string name="express_choice">快递选择</string>
    <string name="scan_prompt_content">请将条形码放入扫描框内即可自动扫描</string>
    <string name="staffer_login">员工登录</string>
    <string name="waybill_no3">运单编号: </string>
    <string name="username_must_not_empty">用户名不能为空</string>
    <string name="pwd_must_not_empty">密码不能为空</string>
    <string name="signing">签收</string>
    <string name="are_you_sure_to_logout">确定要退出吗？</string>
    <string name="cancel">取消</string>
    <string name="is_sure_to_reward">确认收货?</string>
    <string name="is_sure_to_send">确认出货?</string>
    <string name="reward_success">收货成功</string>
    <string name="send_success">出货成功</string>
    <string name="salesman_has_received_the_shipment">业务员已收取货件</string>
    <string name="shipment_loaded_and_sent_to_destination">货件已装车，发往目的地</string>
    <string name="shipments_arrive_at_Station">货件到达站点</string>
    <string name="is_sure_to_arriveplace">确认抵达站点？</string>
    <string name="whether_to_confirm_the_transfer">确认转</string>
    <string name="Waybill_number_cannot_be_empty">运单号不能为空</string>
    <string name="Please_choose_domestic_express">请选择国内快递</string>
    <string name="today">今天</string>
    <string name="has_reward">已收货</string>
    <string name="has_sending">已出货</string>
    <string name="has_transfer">转运中</string>
    <string name="has_arriveplace">抵达转运中心</string>
    <string name="has_delivery">派送中</string>
    <string name="has_sign">已签收</string>
    <string name="is_sure_to_delivery">确认派送</string>
    <string name="is_sure_to_sign">确认签收？</string>
    <string name="name_is_not_empty">姓名不能为空</string>
    <string name="phone_is_not_empty">邮箱不能为空</string>
    <string name="content_is_not_empty">内容不能为空</string>
    <string name="phone_is_uncorrent">邮箱格式有误</string>
    <string name="please_login_first">请先登录</string>
    <string name="shibie_failed">图片识别失败</string>
    <string name="network_is_unavaliable">网络未连接</string>
    <string name="permission_request_failed">权限申请失败</string>
    <string name="danjian">单件</string>
    <string name="duojian">多件</string>
    <string name="queren">确认</string>
    <string name="queren_continue">确认并继续扫描</string>
    <string name="please_do_not_scan_again">请不要重复扫描</string>
    <string name="please_scan_danjian">请扫描单件</string>
    <string name="please_scan_duojian">请扫描多件</string>
    <string name="scan_title">扫描条码</string>
    <string name="scan_duojian">扫描多件单号</string>
    <string name="in_transit">运输中</string>
    <string name="ok_continue_scan_duojian">是否继续扫描多件</string>
    <string name="please_select_express_no_way">请选择输入单号方式</string>
    <string name="manual_input">手动输入</string>
    <string name="scan_barcode">扫描条码</string>
    <string name="scan_gun">扫码枪</string>
    <string name="qdjzl">请点击这里</string>
    <string name="cljg">处理结果</string>
    <string name="please_input_number">请输入条码</string>
    <string name="please_input_express_number">请输入运单号</string>
    <string name="please_input_fake_express_number">请输入假单号</string>
    <string name="please_input_duo_express_number">请输入多件单号，以英文格式的","分开</string>
    <!--<string name="duojian_is_uncorrect">多件单号格式有误</string>-->
    <!-- 二维码扫描 end-->
</resources>
