<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="700px"
    android:layout_height="652px"
    android:orientation="vertical"
    android:background="@drawable/sl_logout_sp">
<TextView
    android:paddingTop="10px"
    android:paddingBottom="15px"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="63px"
    android:textColor="#3E3A39"
    android:gravity="center"
    android:id="@+id/tv_message"
    android:text=""
    />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#B6B5B5"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:orientation="vertical"
        android:layout_width="684px"
        android:layout_height="408px">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="63px"
            android:background="@drawable/btn_selector"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/queren"
            android:id="@+id/tv_queren"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#B6B5B5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="63px"
            android:background="@drawable/btn_selector"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/queren_continue"
            android:id="@+id/tv_queren_continue"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#B6B5B5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textSize="63px"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/btn_selector"
            android:id="@+id/tv_cancel"
            />

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>