<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shyohan.aac.activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    tools:showIn="@layout/app_bar_main">
    <com.youth.banner.Banner
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_width_507_px"
        android:background="@color/white"
        android:scrollIndicators="right"
        app:title_background="#77ffffff"
        app:indicator_drawable_selected="@mipmap/ic_dot_white"
        app:indicator_drawable_unselected="@mipmap/ic_dot_gray"
        app:title_textcolor="@color/white"
        app:indicator_height="22px"
        app:indicator_width="22px"
        app:title_textsize="@dimen/home_left_text_size_45_px"
        android:id="@+id/banner"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="79px"
        android:layout_marginRight="79px"
        android:background="@mipmap/ic_bg_search"
        android:id="@+id/ll_search_box"
        android:layout_marginTop="125px"
        android:layout_height="127px">
        <ImageView
            android:layout_width="70px"
            android:layout_marginLeft="33px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="40px"
            android:src="@mipmap/ic_search" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="24px"
            android:layout_weight="1"
            android:id="@+id/tv_waybill_no"
            android:gravity="center_vertical|start"
            android:hint="@string/please_input_waybill_no"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_scan"
            android:layout_width="70px"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="40px"
            android:src="@mipmap/ic_scan" />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_marginTop="80px"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_shipment_inquiry">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_shipment_inquiry"/>
                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shippment_inquiry"
                    android:id="@+id/tv_shippment_inquiry"
                   />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_site_inquiry">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_site_inquiry"/>
                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site_inquiry"
                    android:id="@+id/tv_site_inquiry"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_server_intro">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_server_introduction"/>
                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_introduction"
                    android:id="@+id/tv_service_introduction"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="0dp"
            android:layout_marginTop="70px"
            android:layout_weight="1">
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_precaution">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_precautions"/>

                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precaution"
                    android:id="@+id/tv_precaution"
                    />
            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_important_matters">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_importants_matters"/>
                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_important_matters"
                    android:text="@string/important_matters"

                    />
            </com.zhy.autolayout.AutoLinearLayout>
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/ll_feed_back">
                <ImageView
                    android:layout_width="161px"
                    android:layout_height="161px"
                    android:src="@mipmap/ic_feed_back"/>
                <TextView
                    android:textColor="@color/textcolor_717071"
                    android:textSize="@dimen/home_left_text_size_45_px"
                    android:layout_marginTop="36px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_back"
                    android:id="@+id/tv_feed_back"
                    />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>
